Setting basic page design

--- a/index.html
+++ b/index.html
@@ -1,5 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
+    <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>GIPHY Search</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <script src="script.js"></script>
 </head>
+    <body>
+        <div id="logo"><img src="https://s3.amazonaws.com/edge-files/company+logos/giphy-white.png"></div>
+        <div class="grid grid-cols-12">
+            <div class="col-span md:col-span-6 p-5">
+            <span><input id="searchbar" type="search" placeholder="What are you looking for?">
+           <button class="btn btn-primary">Search</button></span>
+        </div>
+        </div>
+    </body>
 </html>
