--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <body>
         <div style="size: 200em;"><img src="https://s3.amazonaws.com/edge-files/company+logos/giphy-white.png"></div>
         <div class="grid grid-cols-12">
-            <div class="col-span md:col-span-6 p-5">
-            <span><input id="searchbar" type="search" class="border w-full p-2" placeholder="What are you looking for?" />
+            <div class="flex-container">
+            <input id="searchbar" type="search" class="border w-full p-2" placeholder="What are you looking for?" />
            <button class="btn btn-primary">Search</button></span>
            </div>
         </div>
