--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
         <div style="size: 200em;"><img src="https://s3.amazonaws.com/edge-files/company+logos/giphy-white.png"></div>
         <div class="grid grid-cols-12">
             <div class="flex-container">
-            <input id="searchbar" type="search" class="border w-full p-2" placeholder="What are you looking for?" />
-           <button class="btn btn-primary">Search</button></span>
+            <input id='searchbar' type="search" class="border w-full p-2" placeholder="What are you looking for?" />
+           <button class="btn btn-primary" id='search'>Search</button></span>
            </div>
         </div>
 
-        <div id="results">
+        <div id='results'>
 
 
 
