--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
         <div class="grid grid-cols-12">
             <div class="flex-container">
             <input id='searchbar' type="search" class="border w-full p-2" placeholder="What are you looking for?" />
-           <button class="btn btn-primary" id='search'>Search</button></span>
-           </div>
+            <button class="btn btn-primary" id='search'>Search</button>
+            </div>
         </div>
-
+        
         <div id='results'>
 
 
 
             
         </div>
+
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
